<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifpe.tads.pt.personaltech.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/logo_app"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo_app"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="38dp" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <EditText
           android:id="@+id/email"
           android:layout_marginTop="25dp"
           android:layout_marginLeft="35dp"
           android:layout_width="300dp"
           android:layout_height="50dp"
           android:background="@drawable/bordinha"
           android:fontFamily="sans-serif"
           android:hint="@string/Login_email"
           android:text="vvao@a.recife.ifpe.edu.br"
           android:inputType="textEmailAddress"
           android:paddingLeft="30dip"
           android:paddingRight="26dip"
           android:textSize="20sp"
          />

       <EditText
           android:id="@+id/password"
           android:layout_width="300dp"
           android:layout_height="50dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="35dp"
           android:hint="@string/Login_password"
           android:text="123456"
           android:fontFamily="sans-serif"
           android:inputType="textPassword"
           android:paddingLeft="30dip"
           android:paddingRight="26dip"
           android:background="@drawable/bordinha"
           android:textSize="20sp"
          />

       <Button
           android:id="@+id/button1"
           android:layout_width="88dp"
           android:layout_height="50dp"
           android:layout_marginTop="20dp"
           android:background="@drawable/botao_personalizado"
           android:hint="@string/botao_login"
           android:layout_marginLeft="145dp"
           android:layout_marginBottom="5dp"
           android:onClick="autenticacaoUsuario"

           />
   </LinearLayout>
</LinearLayout>
